<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">MuscleHack</string>
	<string name="action_settings">Settings</string>
	<string name="rss">Articles</string>
	<string name="worklog">Workout</string>
	<string name="testimonials">"Success"</string>
	<string name="recipes">Recipes</string>
	<string name="archives">Archives</string>
	<string name="cart">Cart</string>
	<string name="book">Book</string>
	<string name="no_data">No data</string>
	<string name="no_data_retrieved">No data could be retrieve. Please check your internet connection.</string>
	<string name="loading">Loading. Please wait…</string>
	<string name="weight">Weight</string>
	<string name="reps">Reps</string>
	<string name="rest">Rest</string>
	<string name="previous">Prev:</string>
	<string name="creatingWorkout">Creating workout. Please wait…</string>
	<string name="currentSubWorkout">Current: </string>
	<string name="enableNotifications">Enable notifications </string>
	<string name="settingsNotificationInterval">Interval</string>
	<string name="settingsNotificationIntervalDesc">Interval in minutes rss data will be pull</string>
	<string name="settingsCatData">Data</string>
	<string name="settingsClearWorkout">Clear workout data</string>
	<string name="settingsClearWorkoutDesc">Clear all of the workout data</string>
	<string name="settingsCatNotifications">Notifications</string>
	<string name="settingsArticles">Articles</string>
	<string name="settingsArticlesDesc">Enable or disable article notifications</string>
	<string name="settingsRecipes">Recipes</string>
	<string name="settingsRecipesDesc">Enable or disable recipe notifications</string>
	<string name="settingsSuccesses">Successes</string>
	<string name="settingsSuccessesDesc">Enable or disable success notifications</string>
	<string name="areYouSure">Are you sure?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="numberOfWeeks">Number of weeks:</string>
	<string name="nameWorkout">Name:</string>
	<string name="saveAndContinue">Save and continue</string>
	<string name="warningNeedName">Name required</string>
	<string name="warningNeedNameMessage">You have to enter a program name!</string>
	<string name="warningNeedNWeeks">Number of weeks</string>
	<string name="warningNeedNWeeksMessage">You have to enter the number of weeks of the program!!</string>
	<string name="warningNoData">No data</string>
	<string name="warningNoDataMessage">No data could be retrieve. Please check your internet connection.!</string>
	<string name="warningName">Name</string>
	<string name="warningNameMessage">The entered name is already used!</string>
	<string name="warningNWeeks">Number of weeks</string>
	<string name="warningNWeeksMessage">The number of weeks has to be between 2 and 50!</string>
	<string name="deleteSelectedWorkout">Delete selected workout</string>
	<string name="infoWorkoutDeleted">Workout deleted</string>
	<string name="infoWorkoutDeletedMessage">The workout has been deleted.</string>
	
</resources>
