<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ScrollView01"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >
	
	    <EditText
	        android:id="@+id/editTextName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/editTextNWeeks"
	        android:layout_alignParentRight="true"
	        android:layout_alignTop="@+id/textView1"
	        android:layout_marginRight="10dp"
	        android:inputType="text"
	        android:ems="10" />
	
	    <EditText
	        android:id="@+id/editTextNWeeks"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignTop="@+id/textView2"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:layout_toRightOf="@+id/textView2"
	        android:ems="10"
	        android:inputType="number"
	        android:textAppearance="?android:attr/textAppearanceLarge" >
	    </EditText>
	
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/editTextName"
	        android:layout_marginLeft="22dp"
	        android:layout_marginTop="14dp"
	        android:text="@string/numberOfWeeks"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="14sp" />
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="34dp"
	        android:layout_toLeftOf="@+id/editTextNWeeks"
	        android:text="@string/nameWorkout"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="14sp"
	        />
	
	    <TextView
	        android:id="@+id/textViewProgram"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView2"
	        android:layout_below="@+id/editTextNWeeks"
	        android:layout_marginTop="26dp"
	        android:text="Program:"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textSize="14sp"
	        android:visibility="gone" />
	
	
	        <Spinner
		        android:id="@+id/spinnerProgramNames2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerHorizontal="true"
		        android:layout_below="@+id/editTextNWeeks"
		        android:visibility="invisible"
		        android:layout_marginTop="20dp"
	        />
	
	        <Button
	            android:id="@+id/buttonSave"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/spinnerProgramNames2"
	            android:layout_centerHorizontal="true"
	            android:layout_marginTop="25dp"
	            android:text="@string/saveAndContinue"
			/>
	
	</RelativeLayout>
</ScrollView>