<?xml version="1.0" encoding="utf-8"?>
	<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/mainLayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		>
		<LinearLayout
			android:id="@+id/topLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
			<TextView
				android:id="@+id/exerciseNumber"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:paddingLeft="5dip"
				android:paddingRight="5dip"
				android:textColor="#000000"
				/>
			<TextView
				android:id="@+id/exerciseName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="18sp"
				android:textColor="#0B0A32"
				/>
			<TextView
				android:id="@+id/exerciseId"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:visibility="gone"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
			<TableLayout
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:id="@+id/secondLayout"
				>
				<TableRow>
					<TextView
						android:layout_gravity="center"
						android:textSize="12sp"
						android:text="@string/weight"
						android:textColor="#000000"
						android:paddingRight="5dp"
					/>
					
					<EditText
						android:id="@+id/weight"
						android:layout_gravity="center"
						android:inputType="numberDecimal"
						android:selectAllOnFocus="true"
						android:paddingRight="5dp"
					/>
					
					<TextView
						android:layout_gravity="center"
						android:textSize="12sp"
						android:text="@string/previous"
						android:textColor="#73182C"
						android:paddingRight="5dp"
						/>
					<TextView
						android:id="@+id/previousWeight"
						android:layout_gravity="center"
						android:textColor="#682003"
						android:textAlignment="center"
						android:textIsSelectable="false"
					/>
				</TableRow>
				<TableRow>
					<TextView
						android:layout_gravity="center"
						android:textSize="12sp"
						android:text="@string/reps"
						android:textColor="#000000"
						android:paddingRight="5dp"
					/>
					
					<EditText
						android:id="@+id/nreps"
						android:inputType="numberSigned"
						android:selectAllOnFocus="true"
						android:paddingRight="5dp"
					/>
					
					<TextView
						android:layout_gravity="center"
						android:textSize="12sp"
						android:text="@string/previous"
						android:textColor="#73182C"
						android:paddingRight="5dp"
						/>
					<TextView
						android:id="@+id/previousNreps"
						android:layout_gravity="center"
						android:textColor="#73182C"
						android:textAlignment="center"
						android:textIsSelectable="false"
					/>
		
				</TableRow>
				<TableRow>
					<ImageButton
						android:id="@+id/buttonRest"
						android:layout_gravity="center"
						android:src="@drawable/timer"
						android:contentDescription="@string/rest"
						android:paddingRight="5dp"
						/>
					
					<EditText
						android:id="@+id/rest"
						android:layout_gravity="center"
						android:inputType="numberSigned"
						android:selectAllOnFocus="true"
						android:paddingRight="5dp"
					 />
					
					
					<TextView
						android:layout_gravity="center"
						android:textSize="12sp"
						android:text="@string/previous"
						android:textColor="#73182C"
						android:paddingRight="5dp"
						/>
					<TextView
						android:id="@+id/previousRest"
						android:layout_gravity="center"
						android:textColor="#73182C"
						android:textAlignment="center"
						android:textIsSelectable="false"
					/>
				</TableRow>
	
			</TableLayout>

			<TextView
				android:id="@+id/range"
				android:textSize="12sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>

		</LinearLayout>
	</LinearLayout>
		<!-- 
		<android.support.v7.widget.GridLayout
		    xmlns:app="http://schemas.android.com/apk/com.musclehack.musclehack"
		
			android:id="@+id/secondLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			app:columnCount="3"
			app:rowCount="4"
			>
			<TextView
				android:id="@+id/range"
				app:layout_gravity="fill_horizontal"
				android:textSize="12sp"
				app:layout_row="1"
				app:layout_column="1"
				/>
			<TextView
				app:layout_gravity="fill_horizontal"
				app:layout_row="1"
				app:layout_column="2"
				/>
			<TextView
				app:layout_gravity="fill_horizontal"
				app:layout_row="1"
				app:layout_column="3"
				android:textSize="12sp"
				android:text="@string/previous"
				android:textColor="#73182C"
				/>
			<TextView
				app:layout_gravity="fill_horizontal"
				app:layout_row="2"
				app:layout_column="1"
				android:textSize="12sp"
				android:text="@string/weight"
				android:textColor="#000000"
			/>
			
			<EditText
				android:id="@+id/weight"
				app:layout_row="2"
				app:layout_column="2"
				app:layout_gravity="fill_horizontal"
				android:inputType="numberDecimal"
				android:selectAllOnFocus="true"
			/>
			<TextView
				android:id="@+id/previousWeight"
				app:layout_row="2"
				app:layout_column="3"
				app:layout_gravity="fill_horizontal"
				android:textColor="#682003"
				android:textAlignment="center"
				android:textIsSelectable="false"
			/>
			<TextView
				app:layout_gravity="fill_horizontal"
				app:layout_row="3"
				app:layout_column="1"
				android:textSize="12sp"
				android:text="@string/reps"
				android:textColor="#000000"
			/>
			
			<EditText
				android:id="@+id/nreps"
				app:layout_row="3"
				app:layout_column="2"
				app:layout_gravity="fill_horizontal"
				android:inputType="numberSigned"
				android:selectAllOnFocus="true"
			/>
			
			<TextView
				android:id="@+id/previousNreps"
				app:layout_row="3"
				app:layout_column="3"
				app:layout_gravity="fill_horizontal"
				android:textColor="#73182C"
				android:textAlignment="center"
				android:textIsSelectable="false"
			/>

			<ImageButton
				android:id="@+id/buttonRest"
				app:layout_row="4"
				app:layout_column="1"
				app:layout_gravity="fill_horizontal"
				android:src="@drawable/timer"
				android:contentDescription="@string/rest"
				/>
			
			<EditText
				android:id="@+id/rest"
				app:layout_row="4"
				app:layout_column="2"
				app:layout_gravity="fill_horizontal"
				android:inputType="numberSigned"
				android:selectAllOnFocus="true"
			 />
			

			<TextView
				android:id="@+id/previousRest"
				app:layout_row="4"
				app:layout_column="3"
				app:layout_gravity="fill_horizontal"
				android:textColor="#73182C"
				android:textAlignment="center"
				android:textIsSelectable="false"
			/>
		</android.support.v7.widget.GridLayout>
	</LinearLayout>
	-->
	<!-- 
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/mainLayout"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
	
		<TextView
		android:id="@+id/exerciseNumber"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="14sp"
		android:paddingLeft="5dip"
		android:paddingRight="5dip"
		android:textColor="#000000"
		android:layout_centerVertical="true"
		 />


		<LinearLayout
		android:id="@+id/topLayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_toRightOf="@id/exerciseNumber"
		>
	
			<LinearLayout
			android:id="@+id/firstLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:weightSum="1.0"
			android:orientation="horizontal"
			android:layout_marginBottom="6dp"
			>
	
				<TextView
					android:id="@+id/exerciseName"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.70"
					android:textSize="18sp"
					android:textColor="#0B0A32"
					android:layout_marginRight="4dp"
					/>
				<TextView
					android:id="@+id/exerciseId"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.70"
					android:textSize="16sp"
					android:visibility="gone"
					/>
				<TextView
					android:id="@+id/range"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.30"
					android:textSize="12sp"
					/>
				
			</LinearLayout>
			<LinearLayout
			android:id="@+id/secondLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:weightSum="1.0"
			android:orientation="horizontal"
			>


				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.15"
					android:textSize="12sp"
					android:text="@string/weight"
					android:textColor="#000000"
					android:layout_marginLeft="4dp"
				/>
				
				<EditText
					android:id="@+id/weight"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:inputType="numberDecimal"
					android:layout_weight="0.21"
					android:selectAllOnFocus="true"
				/>
	
				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.10"
					android:textSize="12sp"
					android:layout_marginLeft="4dp"
					android:text="@string/reps"
                    android:textColor="#000000"
				/>
				
				<EditText
					android:id="@+id/nreps"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:inputType="numberSigned"
					android:layout_weight="0.17"
					android:selectAllOnFocus="true"
				/>
	
				<ImageButton
					android:id="@+id/buttonRest"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.20"
					android:text="@string/rest"
					android:src="@drawable/timer"
					android:textSize="12sp"
					android:layout_marginLeft="4dp"
					/>
				
				<EditText
					android:id="@+id/rest"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:inputType="numberSigned"
					android:layout_weight="0.17"
					android:selectAllOnFocus="true"
				 />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/secondLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:weightSum="1.0"
			android:orientation="horizontal"
			>
				

				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.18"
					android:textSize="12sp"
					android:layout_marginLeft="12dp"
					android:text="@string/previous"
                    android:textColor="#73182C"
					android:layout_marginRight="6dp"
				/>

				
				<TextView
					android:id="@+id/previousWeight"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.19"
					android:textColor="#682003"
					android:textAlignment="center"
                    android:textIsSelectable="false"
				/>
			
				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.09"
					android:textSize="12sp"
					android:layout_marginLeft="4dp"
					android:layout_marginRight="20dp"
				/>
				  
				<TextView
					android:id="@+id/previousNreps"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.27"
                    android:textColor="#73182C"
					android:textAlignment="center"
                    android:textIsSelectable="false"
				/>
	
				<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.10"
					android:textSize="12sp"
					android:layout_marginLeft="4dp"
					android:layout_marginRight="20dp"
				/>
				  
				<TextView
					android:id="@+id/previousRest"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="0.17"
                    android:textColor="#73182C"
					android:textAlignment="center"
					android:textIsSelectable="false"
				/>
	
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
 -->
 